fix: better alignment for login form (#35)

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -254,10 +254,12 @@ body {
   align-items: center;
   margin-top: 25%;
   .intro {
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
+    text-align: center;
   }
   form {
     width: 100%;
+    text-align: center;
   }
   * input {
     min-width: 275px;
